deleted:    docs/project.html 	modified:   main.css 	deleted:    project.html 	modified:   rybalka/index.html 	modified:   rybalka/js/main.js

--- a/rybalka/index.html
+++ b/rybalka/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Магазин для рыбалки</title>
     <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="stylesheet" href="./libs/dist/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="./libs/dist/assets/owl.theme.default.min.css">
 </head>
 <body>
     <div class="dalivery" >
@@ -197,15 +199,15 @@
             </div>
         </div> 
         <div class="sales__row">
-            <!-- Block 1 -->
-         <div class="sales__block">
+             <!-- Block 1 -->
+            <div class="sales__block">
                 <div class="sales__name">Бестселлер</div>
                 <div class="sales__model">катушка <br> Adrenalin <br> 7300 BC</div>
                 <div class="sales__img"><img src="./img/sales/img_1.png" alt=""></div>
                 <div class="sales__price">4800р.</div>
-         </div>
+            </div>
             <!-- Block 2 -->
-         <div class="sales__hit__block">
+            <div class="sales__hit__block">
                 <div class="hit__name">хит</div>
                 <div class="hit__img"><img src="./img/sales/mk_detail_rollenhalter.png" alt="halter"></div>
                 <div class="hit__item">
@@ -219,9 +221,9 @@
                 <div class="hit__model">Удилище <br> Matze Koch Rollen</div>
                 <div class="hit__price">13 490 р.</div>
                 <div class="hit__button"><a href="#">в корзину</a></div>
-         </div>
-               <!-- Block 3 -->
-               <div class="sales__hit__block">
+            </div>
+            <!-- Block 3 -->
+            <div class="sales__hit__block">
                 <div class="hit__discount">cкидка</div>
                 <div class="hit__name">хит</div>
                 <div class="hit__img"><img src="./img/sales/shad_jigging2.png" alt="halter"></div>
@@ -251,9 +253,11 @@
                     <div class="hit__model">Катшука<br> Matze Koch Rollen</div>
                     <div class="hit__price">5 600 р.</div>
                     <div class="hit__button"><a href="#">в корзину</a></div>
-             </div>
-
-        </div>
+            </div>
+   
+    
+             <!-- // -->
+            </div>
     </div>
    </section>
    <!-- // SALES -->
@@ -472,6 +476,9 @@
 
         </div>
     </footer>
+        <script src="./libs/jquery-3.5.0.min.js"></script>
+        <script src="./libs/dist/owl.carousel.min.js"></script>
+        <script src="./js/main.js"></script>
 
 </body>
 </html>
