new file:   images/micocin.JPG 	deleted:    images/mikocin111.jpg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
 				<div class="project">
-					<div class="project__img"><img src="./images/mikocin111.jpg" alt="project photo 3"></div>
+					<div class="project__img"><img src="./images/micocin.JPG" alt="project photo 3"></div>
 					<h4 class="project__title">Микоцин</h4>
 					<p class="project__description">Верстка макета</p>	
 					<a class="project__link" href="mikocin/index.html" >Ссылка на сайт</a>				
