new file:   images/antistres.jpg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<a class="project__link" href="mikocin/index.html" >Ссылка на сайт</a>				
 				</div>
 				<div class="project">
-					<div class="project__img"><img src="./images/antistress.jpg" alt="project photo 4"></div>
+					<div class="project__img"><img src="./images/antistres.jpg" alt="project photo 4"></div>
 					<h4 class="project__title">Antistress</h4>	
 					<p class="project__description">Верстка макета</p>
 					<a class="project__link" href="antistress/index.html" >Ссылка на сайт</a>				
