modified:   index.html

--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
 				<p>Верстаю и программирую сайты. Могу сделать для вас сайт и запустить в интернете</p>	
 				<h3 class="about-me__heading--small">Навыки:</h3>
 				<ul>
-					<li> создание сайтов</li>
-					<li> верстка сайтов</li>
-					<li> веб - программирование</li>
+					<li> Навыки работы с HTML5, CSS3</li>
+					<li> базовые знания JavaScript (фреймворк jQuery, например Owl Carousel 2)</li>
+					<li> Работа с Adobe Photoshop (нарезка изображения)</li>
+					<li> Git, GitHub</li>
+					<li> Figma на уровне Веб-дизайнер</li>
+					<li> Opencart, редактирование шаблона по умолчанию, и добавление новых тем.</li>
 				</ul>	
 			</div>
 			<!-- Левая колонка -->
