modified:   index.html 	modified:   main.css

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <body>
 	<header class="header">
 	<div class="container">
-		<h1 class="heading"> Нагорянский Вадим <br>Верстальщик и Веб-разработчик</h1>
-		<p class="subheading">Качественное выполнение работ в необходимые сроки</p>
+		<div class="header__title">
+			<h1 class="heading"> Нагорянский Вадим <br>Верстальщик и Веб-разработчик</h1>
+			<p class="subheading">Качественное выполнение работ в необходимые сроки</p>
+		</div>
+		
 		<div class="social__row">
 			<div class="social__item">
 				<a class="social__link" href="https://github.com/nagor1994/my-project"><img src="images/github.png" alt="github"> </a>
