измненения на главной странице

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 
 	<section class="portfolio" id="portfolio">
 		<div class="container">
-			<div class="portfolio__title">Портфолио</div>
-
+			<h2 class="portfolio__title">Список работ</h2>
 			<div class="portfolio__row">
 				<div class="project" data-aos="zoom-in-up" data-aos-duration="3000">
 					<div class="project__img"><img src="./images/antistres.jpg" alt="project photo 4"></div>
